fix: снизил z-index у кнопок

--- a/src/components/HotelCardHome/HotelCardHome.module.scss
+++ b/src/components/HotelCardHome/HotelCardHome.module.scss
@@ -116,7 +116,7 @@
   // background: none;
   border: none;
   color: var(--color-button-text);
-  font-size: 11px;
+  font-size: var(--font-size-xs);
   text-transform: uppercase;
   letter-spacing: var(--tracking-wide);
   cursor: pointer;
